; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/davinci/extr_vpif_capture.c_vpif_s_input.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/davinci/extr_vpif_capture.c_vpif_s_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.vpif_capture_config* }
%struct.vpif_capture_config = type { %struct.vpif_capture_chan_config* }
%struct.vpif_capture_chan_config = type { i32 }
%struct.file = type { i32 }
%struct.video_device = type { i32 }
%struct.channel_obj = type { i64, %struct.common_obj* }
%struct.common_obj = type { i32 }

@vpif_dev = common dso_local global %struct.TYPE_2__* null, align 8
@VPIF_VIDEO_INDEX = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, i32)* @vpif_s_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vpif_s_input(%struct.file* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.vpif_capture_config*, align 8
  %9 = alloca %struct.video_device*, align 8
  %10 = alloca %struct.channel_obj*, align 8
  %11 = alloca %struct.common_obj*, align 8
  %12 = alloca %struct.vpif_capture_chan_config*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @vpif_dev, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load %struct.vpif_capture_config*, %struct.vpif_capture_config** %14, align 8
  store %struct.vpif_capture_config* %15, %struct.vpif_capture_config** %8, align 8
  %16 = load %struct.file*, %struct.file** %5, align 8
  %17 = call %struct.video_device* @video_devdata(%struct.file* %16)
  store %struct.video_device* %17, %struct.video_device** %9, align 8
  %18 = load %struct.video_device*, %struct.video_device** %9, align 8
  %19 = call %struct.channel_obj* @video_get_drvdata(%struct.video_device* %18)
  store %struct.channel_obj* %19, %struct.channel_obj** %10, align 8
  %20 = load %struct.channel_obj*, %struct.channel_obj** %10, align 8
  %21 = getelementptr inbounds %struct.channel_obj, %struct.channel_obj* %20, i32 0, i32 1
  %22 = load %struct.common_obj*, %struct.common_obj** %21, align 8
  %23 = load i64, i64* @VPIF_VIDEO_INDEX, align 8
  %24 = getelementptr inbounds %struct.common_obj, %struct.common_obj* %22, i64 %23
  store %struct.common_obj* %24, %struct.common_obj** %11, align 8
  %25 = load %struct.vpif_capture_config*, %struct.vpif_capture_config** %8, align 8
  %26 = getelementptr inbounds %struct.vpif_capture_config, %struct.vpif_capture_config* %25, i32 0, i32 0
  %27 = load %struct.vpif_capture_chan_config*, %struct.vpif_capture_chan_config** %26, align 8
  %28 = load %struct.channel_obj*, %struct.channel_obj** %10, align 8
  %29 = getelementptr inbounds %struct.channel_obj, %struct.channel_obj* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = getelementptr inbounds %struct.vpif_capture_chan_config, %struct.vpif_capture_chan_config* %27, i64 %30
  store %struct.vpif_capture_chan_config* %31, %struct.vpif_capture_chan_config** %12, align 8
  %32 = load i32, i32* %7, align 4
  %33 = load %struct.vpif_capture_chan_config*, %struct.vpif_capture_chan_config** %12, align 8
  %34 = getelementptr inbounds %struct.vpif_capture_chan_config, %struct.vpif_capture_chan_config* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = icmp uge i32 %32, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %3
  %38 = load i32, i32* @EINVAL, align 4
  %39 = sub nsw i32 0, %38
  store i32 %39, i32* %4, align 4
  br label %53

40:                                               ; preds = %3
  %41 = load %struct.common_obj*, %struct.common_obj** %11, align 8
  %42 = getelementptr inbounds %struct.common_obj, %struct.common_obj* %41, i32 0, i32 0
  %43 = call i64 @vb2_is_busy(i32* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %48

45:                                               ; preds = %40
  %46 = load i32, i32* @EBUSY, align 4
  %47 = sub nsw i32 0, %46
  store i32 %47, i32* %4, align 4
  br label %53

48:                                               ; preds = %40
  %49 = load %struct.vpif_capture_config*, %struct.vpif_capture_config** %8, align 8
  %50 = load %struct.channel_obj*, %struct.channel_obj** %10, align 8
  %51 = load i32, i32* %7, align 4
  %52 = call i32 @vpif_set_input(%struct.vpif_capture_config* %49, %struct.channel_obj* %50, i32 %51)
  store i32 %52, i32* %4, align 4
  br label %53

53:                                               ; preds = %48, %45, %37
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local %struct.video_device* @video_devdata(%struct.file*) #1

declare dso_local %struct.channel_obj* @video_get_drvdata(%struct.video_device*) #1

declare dso_local i64 @vb2_is_busy(i32*) #1

declare dso_local i32 @vpif_set_input(%struct.vpif_capture_config*, %struct.channel_obj*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
